# BIFrost

./: .gitignore  README.md  pyproject.toml
configs/: 70m_test_A_standard.yaml  70m_test_B_3epoch.yaml  70m_test_C_aggressive_sgld.yaml  70m_test_D_3epoch_aggressive.yaml  70m_test_E_standard_100draw.yaml  70m_test_F_3epoch_100draw.yaml  70m_test_G_aggressive_100draw.yaml  70m_test_H_5ckpt_aggressive_100draw.yaml  70m_v2_E_baseline.yaml  70m_v2_F_3epoch.yaml  70m_v2_G_aggressive.yaml  70m_v2_H_3epoch_aggressive.yaml  70m_v3_finemath_lr2e4.yaml  70m_v3_finemath_simplified.yaml  70m_v3_finemath_test.yaml  _example_full_params.yaml  pythia160m.yaml  pythia160m_formal.yaml  pythia410m.yaml  pythia410m_formal.yaml  pythia70m.yaml  pythia70m_formal.yaml  test_monitoring.yaml  test_quick_v11.yaml
docker/: Dockerfile  Makefile  docker-compose.yml
scripts/: run_70m.sh  run_all.sh
src/bif/: cli.py  config.py  io.py  pipeline.py
src/bif/analysis/: __init__.py  bif_analyzer.py  bif_runner.py  extractor.py  schedule_analyzer.py
src/bif/tools/: __init__.py  count_tokens.py
src/bif/training/: __init__.py  callbacks.py  checkpoint_trainer.py  loss.py  schedule_trainer.py  sgld.py
src/bif/utils/: __init__.py  tracker.py
tests/: test_transformers_compat.py
