[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bifrost"
version = "0.1.0"
description = "BIFrost — Bayesian Influence Function for data influence estimation in LLM fine-tuning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "BIFrost Contributors"},
]
dependencies = [
    "torch>=2.0",
    "transformers>=5.0",
    "accelerate>=1.1.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "tqdm>=4.65",
    "swanlab>=0.4",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.8",
    "pytest>=7.0",
]

[project.scripts]
bifrost = "bif.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
